# Esercitazioni_PCS_2026

./: prova
Esercitazione_1/: CMakeLists.txt  media_t.cpp
Esercitazione_2/: CMakeLists.txt  es_1.cpp  es_2.cpp
Esercitazione_3/: CMakeLists.txt  main.cpp  rational.hpp
Esercitazione_4/: CMakeLists.txt  misure.cpp  sorts.hpp  tempi.m  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
Esercitazione_5/: CMakeLists.txt  measures.cpp  sorts.hpp  tempi.m  test_bubblesort.cpp  test_insertionsort.cpp  test_mergesort.cpp  test_modified_quicksort.cpp  test_quicksort.cpp  test_selectionsort.cpp
Esercitazione_8/: CMakeLists.txt  edges.cpp  graphs2.cpp
Esercitazione_9/: CMakeLists.txt  graph_visit.hpp  main.cpp  undirected_edge.hpp  undirected_graph2.hpp
